--- a/02_Intro_to_Python_Student.ipynb
+++ b/02_Intro_to_Python_Student.ipynb
@@ -53,29 +53,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.380211241711606\n"
+     ]
+    }
+   ],
    "source": [
-    "# Addition and Subtraction\n"
+    "# Addition and Subtraction\n",
+    "# write a code to calculate base 10 log of a number\n",
+    "# using the formula log(x) = ln(x)/ln(10)\n",
+    "import math\n",
+    "x = 24\n",
+    "log10 = math.log(x)/math.log(10)\n",
+    "print(log10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Multiplication and Division\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exponentiation\n"
+    "# Exponentiation\n",
+    "6**2"
    ]
   },
   {
@@ -90,17 +127,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "a = 'e2'\n",
+    "type(a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4.573\n",
+    "print(type(a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Shayan'\n",
+    "fs = f\"My name is {name}\"\n",
+    "print(type(fs))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,28 +205,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n",
+      "<class 'int'>\n",
+      "7.641592653589793\n",
+      "<class 'float'>\n",
+      "48.1415926535898\n",
+      "<class 'float'>\n",
+      "14.32394487827058\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Integers \n",
-    "\n",
+    "a = -2\n",
+    "b = 45\n",
     "# Floats\n",
-    "\n",
+    "c = 4.5\n",
+    "d = math.pi\n",
     "# Strings\n",
-    "\n",
+    "e = \"\"\n",
+    "f = \"World\"\n",
+    "g = \"Hello\"\n",
+    "h = \"\\u0312\"\n",
     "# Add two int variables\n",
-    "\n",
+    "i = a+b\n",
+    "print(i)\n",
+    "print(type(i))   \n",
     "# Add two float variables\n",
-    "\n",
+    "i = c+d\n",
+    "print(i)\n",
+    "print(type(i))\n",
     "# Add an int and a float\n",
-    "\n",
-    "# Divide a int by a float\n"
+    "i = d+b\n",
+    "print(i)\n",
+    "print(type(i))\n",
+    "# Divide a int by a float\n",
+    "i = b/d\n",
+    "print(i)\n",
+    "print(type(i))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,11 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# To use Math, we must import it\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcos\u001b[49m(\u001b[38;5;241m0\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cos' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# To use Math, we must import it\n"
+    "# To use Math, we must import it\n",
+    "import math\n",
+    "print(cos(0))"
    ]
   },
   {
@@ -190,10 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.cos(0))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,12 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "     # we only imported cos, not the pi constant"
+    "from math import cos     \n",
+    "     # we only imported cos, not the pi constant\n",
+    "print(cos(0))"
    ]
   },
   {
@@ -225,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from math import *\n",
     "   # now we don't have to make a call to math--but this is lazy and not recommended"
    ]
   },
@@ -246,10 +383,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Come on Gators\n",
+      "Come on Gators\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = \"Go Gators, Come on Gators, Get up and go!\"\n",
+    "print(mystring[11:25])\n",
+    "print(mystring[mystring.index(\",\")+2:25])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,10 +446,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'go'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mystring[-3:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -312,17 +475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gators\n",
+      "Gators\n"
+     ]
+    }
+   ],
    "source": [
     "# Add your code here\n",
-    "\n"
+    "print(mystring[mystring.index(\"Gators\"):mystring.index(\",\")])\n",
+    "\n",
+    "print(mystring.split()[1][:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,13 +1179,53 @@
    "source": [
     "# Thank You !"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person():\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def introduction(self):\n",
+    "        print(f\"My name is {self.name} and I am {self.age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Matt and I am 25 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "matt = Person(\"Matt\", 25)\n",
+    "matt.introduction() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "UFRC Python-3.10",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3-3.10-ufrc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1023,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
