--- a/03_Intro_to_Numpy_Student.ipynb
+++ b/03_Intro_to_Numpy_Student.ipynb
@@ -45,10 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.2.0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.__version__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,11 +363,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1 1]\n",
+      " [1 1 1 1]\n",
+      " [1 1 1 1]\n",
+      " [1 1 1 1]]\n",
+      "\n",
+      " [[1 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0]\n",
+      " [0 0 1 0 0 0]\n",
+      " [0 0 0 1 0 0]\n",
+      " [0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 1]]\n",
+      "\n",
+      " [[[7.94095583 6.21472141 3.98046053]\n",
+      "  [5.95587645 4.7964992  5.61614911]\n",
+      "  [5.64544049 8.3817578  6.13515615]]\n",
+      "\n",
+      " [[2.20061054 4.88713899 6.75864402]\n",
+      "  [4.50536548 5.33795034 4.89214614]\n",
+      "  [3.80849411 5.48968806 3.24253956]]\n",
+      "\n",
+      " [[8.78984531 3.85726456 5.03929789]\n",
+      "  [3.24439505 5.62609309 4.15323312]\n",
+      "  [6.73053548 4.53983248 5.28096484]]]\n",
+      "\n",
+      " [ 5.        5.000005  5.00001  ...  9.99999   9.999995 10.      ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(np.ones((4,4), dtype=int))\n",
+    "print('\\n',np.eye(6,dtype=int))\n",
+    "print('\\n',np.random.normal(5,2,(3,3,3)))\n",
+    "print('\\n',np.linspace(5,10,1000000))"
    ]
   },
   {
@@ -1103,9 +1153,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "UFRC Python-3.10",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3-3.10-ufrc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1117,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
